fixed icons visibility

--- a/src/Components/Techonologies/style.css
+++ b/src/Components/Techonologies/style.css
@@ -50,7 +50,6 @@
 
 .noFilterIcons {
   background-color: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(8px);
   width: 20%;
 }
 
